--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>DermAI Research</title>
+  <title>DermoAI by Group51 Research</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Icons -->
